Bug 1329697 - registering typelib for IGeckoCustom interface. r=aklotz

MozReview-Commit-ID: CIvoSrPrRVM